--- a/aviss/index.html
+++ b/aviss/index.html
@@ -325,14 +325,14 @@
       color: var(--color);
     }
 
-    li a,
+    article li a,
     #repre a {
       padding: 5px;
       background: #00337c;
       border-radius: 5px;
       color: white; 
     }
-    li a{
+    article li a{
     position: absolute; 
     bottom: 7px;
     right: 10px;
@@ -486,14 +486,14 @@
           <div class="date">March 2022</div>
           <div class="title">Company Established</div>
           <div class="descr">Founded the company with 20 million KRW in capital, passion, and confidence in our skills
-            <a href="https://www.kised.or.kr/menu.es?mid=a10205010000" target="_blank"
-              rel="noopener noreferrer">link</a></div>
+            </div>
         </li>
         <li style="--accent-color:#00337C">
           <div class="date">November 2022</div>
-          <div class="title">Selected as Excellent Company</div>
+          <div class="title">Selected as Excellent Company(예창패)</div>
           <div class="descr">Selected as the best company in the Fintech sector of the 2022 Startup Package with a 10:1
-            competition rate.</div>
+            competition rate. <a href="https://www.kised.or.kr/menu.es?mid=a10205010000" target="_blank"
+            rel="noopener noreferrer">link</a></div>
         </li>
         <li style="--accent-color:#00337C">
           <div class="date">January 2023</div>
@@ -511,7 +511,7 @@
         <li style="--accent-color:#00337C">
           <div class="date">March 2024</div>
           <div class="title">Early start-up package</div>
-          <div class="descr">My company was selected for the initial start-up package and the youth start-up package.<a
+          <div class="descr">My company was selected for the initial start-up package and the youth start-up package.(초창패)<a
               href="https://www.kised.or.kr/menu.es?mid=a10205020000" target="_blank" rel="noopener noreferrer">link</a>
           </div>
         </li>
@@ -519,8 +519,7 @@
           <div class="date">July 2024</div>
           <div class="title">Profitability</div>
           <div class="descr">With our products, we achieved the top 13% in the actual investment competition of Toss
-            Securities and achieved the top 5% of the total return on Toss Securities in July.<a
-              href="https://www.kised.or.kr/menu.es?mid=a10205020000" target="_blank" rel="noopener noreferrer">link</a>
+            Securities and achieved the top 5% of the total return on Toss Securities in July.(토스증권 수익 상위 5%)
           </div>
         </li>
       </ul>
@@ -570,19 +569,19 @@
       <p> - Army Missile Command Commander Award (related to military SW development)</p>
     </div>
     <div id="product">
-      <h1>product : AVISS report</h1>
+      <h1>Issue report</h1>
       <img src="./assets/1.png" alt="">
       <p>Graph Artificial Intelligence Model-based Investment Analysis Report for individual investors' quick response
         to issues allows individual investors to receive AI investment analysis reports within 5 minutes, which allows
         them to quickly identify appropriate countermeasures.</p>
-      <h1>product : AVISS signal</h1>
+      <h1>market signal</h1>
       <img src="./assets/2.png" alt="">
       <p>
-        Abyss Signal, which informs when to buy or sell based on patented algorithms
+        Abyss Signal, which informs when to buy or sell based on patented algorithms. The picture above shows that the pre-trash sell recommendation and the buy recommendation after the crash in August 2024.
       </p>
-      <h1>product : AVISS macroreport</h1>
+      <h1>Macro report</h1>
       <img src="./assets/3.png" alt="">
-      <p>A macroeconomic report that analyzes only the necessary macroeconomics.</p>
+      <p>Macroeconomic analysis is essential when judging buying or selling stocks. We provide a report that analyzes important macroeconomic indicators determined by our company with our model.</p>
     </div>
   </article>
   <footer>
