--- a/aviss/index.html
+++ b/aviss/index.html
@@ -590,7 +590,7 @@
       <h1>market signal</h1>
       <img src="./assets/2.png" alt="">
       <p>
-        Abyss Signal, which informs when to buy or sell based on patented algorithms. The picture above shows that the pre-trash sell recommendation and the buy recommendation after the crash in August 2024.
+        Abyss Signal, which informs when to buy or sell based on patented algorithms. The picture above shows that the pre-trash sell recommendation and the buy recommendation after the crash in 2024.07
       </p>
       <h1>Macro report</h1>
       <img src="./assets/3.png" alt="">
