--- a/aviss/index.html
+++ b/aviss/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -503,8 +503,7 @@
         perspectives to achieve performance.
         We provide AI analysis reports to quickly respond to issues of interest, and offer analysis reports and
         recommendation alerts for stocks selected by AVISS.
-      </p>
-      <p>Experience AVISS first by setting up notifications. </p>
+      </p> 
       <p>Experience the smart AI assistant, AVISS, first through notification settings.</p>
       <div>
         <a href="https://forms.gle/fAKqbwJVhC1gcHfM8" target="_blank" class="notice">Apply for Notification</a>
@@ -585,7 +584,7 @@
     </div>
     <div id="product">
 
-      <h1>Economic Issues Report to be Published in 5 Minutes</h1>
+      <h1>Economic Issues Report</h1>
       <section>
         <img src="./assets/1.png" alt="">
         <div>
@@ -676,7 +675,7 @@
   </footer>
 </body>
 
-<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+<!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
 <script type="text/javascript">
   function googleTranslateElementInit() {
@@ -689,7 +688,7 @@
 </script>
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-</script>
+</script> -->
 
 </html>
  
