--- a/aviss/index.html
+++ b/aviss/index.html
@@ -9,9 +9,10 @@
   <meta name="keywords" content="team quantumuse">
   <meta name="Resource-type" content="Document">
   <meta name="robots" content="ALL">
+  <meta http-equiv="Content-Language" content="en"> 
   <link rel="icon" href="./favicon.ico" />
   <link rel="shortcut icon" href="./favicon.ico" />
-  <title>어비스를 소개합니다.</title>
+  <title>Introduce AVISS</title>
   <meta property="og:locale" content="ko_KR">
   <meta property="og:image" content="https://wnghdcjfe.github.io/aviss/og-image.png">
   <meta property="og:type" content="website">
@@ -461,15 +462,15 @@
       fadeIn();
 
 
-      var typed = new Typed('#element', {
+      new Typed('#element', {
         strings: ['Invest Smartly'],
         typeSpeed: 90,
         startDelay: 1000,
         fadeOut: true,
         loop: true,
       });
-      var typed = new Typed('#element2', {
-        strings: ['consistently'],
+      new Typed('#element2', {
+        strings: ['Consistently and Great'],
         typeSpeed: 90,
         startDelay: 1000,
         fadeOut: true,
@@ -675,9 +676,9 @@
   </footer>
 </body>
 
-<!-- <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   function googleTranslateElementInit() {
     new google.translate.TranslateElement({
       pageLanguage: 'en',
