--- a/WhatWeWork/index.html
+++ b/WhatWeWork/index.html
@@ -110,8 +110,7 @@
                             주홍철
 
                         </h2>
-                        <p>현) 핀테크 스타트업, 어비스 대표</p>
-                        <p>전) 네이버개발자</p>
+                        <p>현) 핀테크 스타트업, 어비스 대표</p> 
                         <p>베스트셀러, 면접을 위한 CS전공지식노트 저자</p>
                     </div>
 
@@ -137,9 +136,7 @@
                         <p>현) 스타트업 데이터엔지니어</p>
                         <p>현) MongoDB Korea 운영진</p>
                         <p>전) SK C&C 데이터엔지니어</p>
-                    </div>
-
-
+                    </div> 
                     <div>
                         <h1>
                             KT 챗봇 온 듀티
@@ -154,13 +151,13 @@
 
                     <div>
                         <h1>
-                            개발자의 성장, 이렇게 하면 빠르다!
+                            개발자의 성장, 어 이거 성장아녀?
                         </h1>
                         <h2>
                             황진성
 
                         </h2>
-                        <p>마켓컬리 백엔드 개발자</p>
+                        <p>컬리 백엔드 개발자</p>
                     </div>
 
                     <div>
@@ -182,9 +179,17 @@
                         <h2>
                             정지용
                         </h2>
-                        <p>2024 대한민국 개발보안대회 1위</p>
+                        <p>취준생</p>
+                    </div> 
+                    <div>
+                        <h1>
+                            사노바로 살아남기
+                        </h1>
+                        <h2>
+                            김지훈 
+                        </h2>
+                        <p>캐치테이블 백엔드 개발자</p>
                     </div>
-
                 </div>
             </div>
         </div>
