--- a/WhatWeWork/index.html
+++ b/WhatWeWork/index.html
@@ -203,7 +203,7 @@
                     </div>
                     <div>
                         <h1>
-                            사노바로 살아남기
+                            사노비로 살아남기
                         </h1>
                         <h2>
                             김지훈
