--- a/WhatWeWork/index.html
+++ b/WhatWeWork/index.html
@@ -154,7 +154,7 @@
                             김인범
 
                         </h2>
-                        <p>스타트업 데이터엔지니어</p>
+                        <p>RSQUARE 데이터엔지니어</p>
                         <p>MongoDB Korea 운영진</p>
                     </div>
                     <div>
