--- a/WhatWeWork/index.html
+++ b/WhatWeWork/index.html
@@ -53,6 +53,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
     <style>
+        .logobook{
+            width:100px;
+            display: inline-block;
+            margin-right: 20px;
+            border-radius: 15px;
+        }
         h1 {
 
             font-size: 1.2rem;
@@ -157,28 +163,7 @@
                         <p>RSQUARE 데이터엔지니어</p>
                         <p>MongoDB Korea 운영진</p>
                     </div>
-                    <div>
-                        <h1>
-                            KT 챗봇 온 듀티
 
-                        </h1>
-                        <h2>
-                            조영래
-
-                        </h2>
-                        <p>KT SW 엔지니어</p>
-                    </div>
-
-                    <div>
-                        <h1>
-                            개발자의 성장, 어 이거 성장아녀?
-                        </h1>
-                        <h2>
-                            황진성
-
-                        </h2>
-                        <p>컬리 백엔드 개발자</p>
-                    </div>
 
                     <div>
                         <h1>
@@ -191,6 +176,40 @@
                         </h2>
                         <p>프리랜서 백엔드 개발자</p>
                     </div>
+
+                    <div>
+                        <h1>
+                            개발자의 성장, 어 이거 성장아녀?
+                        </h1>
+                        <h2>
+                            황진성
+
+                        </h2>
+                        <p>컬리 백엔드 개발자</p>
+                    </div> 
+
+                    <div>
+                        <h1>
+                            KT 챗봇 온 듀티
+
+                        </h1>
+                        <h2>
+                            조영래
+
+                        </h2>
+                        <p>KT SW 엔지니어</p>
+                    </div>
+  
+                    <div>
+                        <h1>
+                            사노비로 살아남기
+                        </h1>
+                        <h2>
+                            김지훈
+                        </h2>
+                        <p>캐치테이블 백엔드 개발자</p>
+                    </div>
+
                     <div>
                         <h1>
                             제목은 스위프트 비동기 하겠습니다. 근데 동시성을 곁들인
@@ -201,16 +220,26 @@
                         </h2>
                         <p>취준생</p>
                     </div>
-                    <div>
-                        <h1>
-                            사노비로 살아남기
-                        </h1>
-                        <h2>
-                            김지훈
-                        </h2>
-                        <p>캐치테이블 백엔드 개발자</p>
-                    </div>
                 </div>
+
+                <div class="fadein grid place-content-center gap-12 bg-black px-5 py-16 text-white sm:gap-16">
+                    <div class="grid gap-4 sm:gap-5">
+                        <div
+                            class="react-reveal grid h-16 w-16 place-content-center place-self-center rounded-full bg-[#FFFFFF1a] sm:h-20 sm:w-20">
+                            <img alt="mic" srcset="./imgs/sponsor.avif" src="imgs/image" width="50" height="50"
+                                decoding="async" data-nimg="future"
+                                class="inline-block aspect-square h-8 w-8 sm:h-10 sm:w-10" style="color:transparent" />
+                        </div>
+                        <h2 class="react-reveal text-center text-lg font-bold sm:text-2xl">후원사</h2>
+                    </div>
+                    <div>
+                        <img src="./imgs/1.jpg" alt="" class="logobook"> 
+                        <img src="./imgs/2.jpg" alt="" class="logobook"> 
+
+                        <img src="./imgs/3.png" alt="" class="logobook"> 
+                    </div>  
+                </div>
+
             </div>
         </div>
     </div>
